Fix member long name cropping with new style

--- a/app/assets/stylesheets/member/members.scss
+++ b/app/assets/stylesheets/member/members.scss
@@ -18,6 +18,7 @@
 }
 
 .memberName {
+    white-space: nowrap;
     user-select: none;
     font-weight: bold;
     color: var(--text-muted);
